# mop

./: .gitignore  README.md  argparser.py  data_structures.py  helper.pl  mixture.py  mop.py  prolog_interface.py  pyproject.toml  setup.cfg
mop/: __init__.py  argparser.py  mixture.py  mop.py  prolog_interface.py
