[metadata]
name = mop
version = 0.0.1
author = Damiano Azzolini
author_email = damiano.azzolini@unife.it
description = MOP: Mixtures Of Probabilistic logic programs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/damianoazzolini/mop
project_urls =
    Bug Tracker = https://github.com/damianoazzolini/mop/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3 License
    Operating System :: OS Independent

[options]
packages = mop
python_requires = >=3.9
install_requires =
    numpy
    scipy
    janus_swi

[options.entry_points]
console_scripts =
    mop = mop:main